--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ libtool
 /debian/*.log
 /debian/vyatta-zone
 /debian/vyatta-zone.substvars
+/debian/.debhelper/
+/debian/changelog.*
 /INSTALL
 /Makefile.in
 /Makefile
